src/test/ui/feature-gate-dotdoteq_in_patterns.stderr
error[E0658]: `..=` syntax in patterns is experimental (see issue #28237)
  --> $DIR/feature-gate-dotdoteq_in_patterns.rs:13:9
   |
LL |         0 ..= 3 => {} //~ ERROR `..=` syntax in patterns is experimental
   |         ^^^^^^^
   |
   = help: add #![feature(dotdoteq_in_patterns)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
